src/c/vkernels/capi/capi.hpp

/* ------------------------------------------------------------------ */
/* Status codes (mirror vkernels::Code)                                */
/* ------------------------------------------------------------------ */
enum {
  VK_OK = 0,
  VK_ERROR_INVALID_ARGUMENT = 1,
  VK_ERROR_OUT_OF_RANGE = 2,
  VK_ERROR_UNSUPPORTED = 3,
  VK_ERROR_INTERNAL = 4
};
/* ------------------------------------------------------------------ */
/* Version / config                                                    */
/* ------------------------------------------------------------------ */

/* Static version string of the C++ library ("0.1.0"). */
const char* vk_version(void);
/* 1 when the library was compiled with CUDA enabled, else 0. */
int vk_has_cuda(void);
/* Thread-local message of the most recent failing call ("" if none). */
const char* vk_last_error(void);
typedef struct vk_stream vk_stream;
/* Enqueue `fn(ctx)` to run on the stream, in submission order. The
 * callback runs on the stream's worker thread; it must not call back into
 * the stream. */
int32_t vk_stream_submit(vk_stream* s, void (*fn)(void*), void* ctx);
typedef struct vk_channel vk_channel; /* MockChannel (send/recv) */
/* ------------------------------------------------------------------ */
/* comm: ring all-reduce (src/c/vkernels/comm/allreduce.hpp)            */
/* ------------------------------------------------------------------ */

/* Run rank `rank` of a ring all-reduce; on success `local` holds the
 * element-wise sum across every rank. `local` is unchanged on error. */
int32_t vk_ring_allreduce_rank(float* local, size_t local_len, int32_t rank,
                               int32_t world, vk_channel* next,
                               vk_channel* prev);
/* ------------------------------------------------------------------ */
/* comm: overlap (src/c/vkernels/comm/overlap.hpp)                      */
/* ------------------------------------------------------------------ */

typedef struct vk_overlap vk_overlap;
vk_overlap* vk_overlap_new(void);
void vk_overlap_delete(vk_overlap* ex);
int vk_overlap_uses_two_streams(const vk_overlap* ex);
/* Run `iters` iterations: compute(i) -> int on stream A, comm(i, value) on
 * stream B; the data dependency is honoured via a per-iteration future. The
 * callbacks run on the executor's worker threads; both must be non-null.
 * On success *out_compute_count and *out_comm_count are both `iters`. */
int32_t vk_overlap_run(vk_overlap* ex, size_t iters,
                       int (*compute)(size_t i, void* ctx), void* compute_ctx,
                       void (*comm)(size_t i, int value, void* ctx),
                       void* comm_ctx, size_t* out_compute_count,
                       size_t* out_comm_count);
/* ------------------------------------------------------------------ */
/* comm: p2p run-list gather (src/c/vkernels/comm/p2p_gather.hpp)       */
/* ------------------------------------------------------------------ */

/* 1-D copy run (mirrors comm::StagedRun1D). */
typedef struct vk_staged_run_1d {
  const void* src;
  size_t dst_offset;
  size_t length;
} vk_staged_run_1d;
/* Strided 2-D tile input (mirrors comm::Gather2DRun). */
typedef struct vk_gather_2d {
  const void* src;
  size_t src_stride;
  size_t dst_offset;
  size_t dst_stride;
  size_t width;
  size_t height;
} vk_gather_2d;
/* Staged 2-D tile (mirrors comm::StagedRun2D). */
typedef struct vk_staged_run_2d {
  const void* src;
  size_t dst_offset;
  size_t src_stride;
  size_t dst_stride;
  size_t width;
  size_t height;
} vk_staged_run_2d;
/* Validate a 1-D run list against `dst` and return the staged runs as a
 * malloc'd array of `*out_count` vk_staged_run_1d (vk_free it). Raises
 * VK_ERROR_INVALID_ARGUMENT on contract violations. */
int32_t vk_stage_runs_1d(const uint8_t* dst, size_t dst_capacity,
                         const void* const* src_ptrs,
                         const size_t* dst_offsets, const size_t* lengths,
                         size_t num_runs, vk_staged_run_1d** out,
                         size_t* out_count);
/* Validate a 2-D run list against `dst` and return the staged tiles as a
 * malloc'd array of `*out_count` vk_staged_run_2d (vk_free it). */
int32_t vk_stage_runs_2d(const uint8_t* dst, size_t dst_capacity,
                         const vk_gather_2d* runs, size_t num_runs,
                         vk_staged_run_2d** out, size_t* out_count);
/* Copy every 1-D run into dst in a single operation (one stream task when
 * `stream` is non-null; synchronous when null). `dst` must outlive the
 * stream. */
int32_t vk_p2p_gather_runs(uint8_t* dst, size_t dst_capacity,
                           const void* const* src_ptrs,
                           const size_t* dst_offsets, const size_t* lengths,
                           size_t num_runs, vk_stream* stream);
/* Copy every 2-D tile into dst in a single operation. */
int32_t vk_p2p_gather_runs_2d(uint8_t* dst, size_t dst_capacity,
                              const vk_gather_2d* runs, size_t num_runs,
                              vk_stream* stream);
/* Legacy seam: one copy per run (one stream task per run, so
 * vk_stream_submitted grows by the run count instead of 1). */
int32_t vk_memcpy_peer_batch_async(uint8_t* dst, size_t dst_capacity,
                                   const void* const* src_ptrs,
                                   const size_t* dst_offsets,
                                   const size_t* lengths, size_t num_runs,
                                   vk_stream* stream);