src/rust/vkernels-sys/src/lib.rs


    // -- comm: ring all-reduce ------------------------------------------------
    pub fn vk_ring_allreduce_rank(
        local: *mut f32,
        local_len: usize,
        rank: i32,
        world: i32,
        next: *mut vk_channel,
        prev: *mut vk_channel,
    ) -> i32;

    // -- comm: overlap ---------------------------------------------------------
    pub fn vk_overlap_new() -> *mut vk_overlap;
    pub fn vk_overlap_delete(ex: *mut vk_overlap);
    pub fn vk_overlap_uses_two_streams(ex: *const vk_overlap) -> c_int;
    pub fn vk_overlap_run(
        ex: *mut vk_overlap,
        iters: usize,
        compute: Option<unsafe extern "C" fn(usize, *mut c_void) -> c_int>,
        compute_ctx: *mut c_void,
        comm: Option<unsafe extern "C" fn(usize, c_int, *mut c_void)>,
        comm_ctx: *mut c_void,
        out_compute_count: *mut usize,
        out_comm_count: *mut usize,
    ) -> i32;

    // -- comm: p2p run-list gather ---------------------------------------------
    pub fn vk_stage_runs_1d(
        dst: *const u8,
        dst_capacity: usize,
        src_ptrs: *const *const c_void,
        dst_offsets: *const usize,
        lengths: *const usize,
        num_runs: usize,
        out: *mut *mut vk_staged_run_1d,
        out_count: *mut usize,
    ) -> i32;
    pub fn vk_stage_runs_2d(
        dst: *const u8,
        dst_capacity: usize,
        runs: *const vk_gather_2d,
        num_runs: usize,
        out: *mut *mut vk_staged_run_2d,
        out_count: *mut usize,
    ) -> i32;
    pub fn vk_p2p_gather_runs(
        dst: *mut u8,
        dst_capacity: usize,
        src_ptrs: *const *const c_void,
        dst_offsets: *const usize,
        lengths: *const usize,
        num_runs: usize,
        stream: *mut vk_stream,
    ) -> i32;
    pub fn vk_p2p_gather_runs_2d(
        dst: *mut u8,
        dst_capacity: usize,
        runs: *const vk_gather_2d,
        num_runs: usize,
        stream: *mut vk_stream,
    ) -> i32;
    pub fn vk_memcpy_peer_batch_async(
        dst: *mut u8,
        dst_capacity: usize,
        src_ptrs: *const *const c_void,
        dst_offsets: *const usize,
        lengths: *const usize,
        num_runs: usize,
        stream: *mut vk_stream,
    ) -> i32;
}

/// Version string of the C++ library.
pub fn version() -> &'static str {
    unsafe {
        let p = vk_version();
        if p.is_null() {
            ""
        } else {
            std::ffi::CStr::from_ptr(p).to_str().unwrap_or("")
        }
    }
}

/// Whether the linked library was compiled with CUDA support.
pub fn has_cuda() -> bool {
    unsafe { vk_has_cuda() != 0 }
}

/// Thread-local message of the most recent failing call ("" if none).
pub fn last_error() -> String {
    unsafe {
        let p = vk_last_error();
        if p.is_null() {
            String::new()
        } else {
            std::ffi::CStr::from_ptr(p).to_string_lossy().into_owned()
        }
    }
}

/// Translate a status code into a human-readable label (for diagnostics).
pub fn status_name(code: i32) -> &'static str {
    match code {
        VK_OK => "ok",
        VK_ERROR_INVALID_ARGUMENT => "invalid_argument",
        VK_ERROR_OUT_OF_RANGE => "out_of_range",
        VK_ERROR_UNSUPPORTED => "unsupported",
        VK_ERROR_INTERNAL => "internal",
        _ => "unknown",
    }
}
